# update

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
resources/: resource.rc
src/: main.cpp
src/request/: request.cpp  request.h
src/utils/: utils.cpp  utils.h
src/views/: home.cpp  home.h
